<resources>
    <string name="app_name">Katbag</string>
    <string name="title_activity_board">Tablero</string>
    <string name="title_activity_add">&#8230;</string>
    <string name="title_activity_add_game">Nuevo Juego</string>
    <string name="title_activity_add_book">Nuevo Libro</string>
    <string name="title_activity_add_comics">Nuevo Comics</string>
    <string name="title_activity_edit">Editar Aplicaciones</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_select_type">Selecciona Tipo</string>
    <string name="title_activity_worlds">Escenarios</string>
    <string name="title_activity_drawings">Personajes</string>
    <string name="title_activity_developments">Programando</string>
    <string name="title_activity_pages">Páginas</string>
    <string name="title_activity_player">Player</string>
    <string name="image_description">image</string>
    <string name="name_app_empty">El nombre no puede estar vacío</string>
    <string name="name_app_short">El nombre debe tener 3 caracteres como mínimo</string>
    <string name="name_app_new">Listo!, ahora puedes agregar los escenario, personajes y la programación</string>
    <string name="name_app_update">Listo!, acabas de cambiar el nombre</string>
    <string name="app_empty">Primero debes completar el nombre y presionar Enter en el teclado</string>
    <string name="dialog_title_select">Selecciona</string>
    <string name="dialog_title_select_picker_color">Selecciona un color</string>
    <string name="dialog_button_cancel">Cancelar</string>
    <string name="dialog_button_select">Seleccionar</string>
    <string name="dialog_button_ok">OK</string>
    <string name="subtitle_options_menu">Opciones de menú</string>
    <string name="option_menu_board">Tablero</string>
    <string name="option_menu_add">Nuevo</string>
    <string name="option_menu_edit">Editar</string>
    <string name="option_menu_about">Acerca</string>
    <string name="version_app">Versión:</string>
    <string name="dialog_exit_title">Estas a punto de salir</string>
    <string name="dialog_exit_text">¿Queres cerrar katbag?</string>
    <string name="dialog_exit_button_yes">Si</string>
    <string name="dialog_exit_button_no">No</string>
    <string name="board_not_register">No has creado aplicaciones, crea una desde el menú principal</string>
    <string name="edit_not_register">No has creado aplicaciones, crea una desde el menú principal</string>
    <string name="edit_get_id">Id App:</string>
    <string name="select_type_item_game_title">Juegos</string>
    <string name="select_type_item_book_title">Libros</string>
    <string name="select_type_item_comics_title">Comics</string>
    <string name="select_type_item_game_subtitle">Crea juegos sencillos</string>
    <string name="select_type_item_book_subtitle">Crea un cuento con imagenes y sonido</string>
    <string name="select_type_item_comics_subtitle">Crea tus propios personajes con dialogo</string>
    <string name="add_edit_app">Editando</string>
    <string name="subtitle_config_app">Progreso de la construcción</string>
    <string name="config_hint_name_app">Escribe un nombre</string>
    <string name="config_app_worlds_title">Escenarios</string>
    <string name="config_app_drawings_title">Personajes</string>
    <string name="config_app_developments_title">Programación</string>
    <string name="config_app_pages_title">Páginas</string>
    <string name="config_app_worlds_subtitle">Selecciona color, imagen ó una foto</string>
    <string name="config_app_drawings_subtitle">Arma tus personajes arrastrando partes</string>
    <string name="config_app_developments_subtitle">Objetos, eventos, acciones, movimiento</string>
    <string name="config_app_pages_subtitle">Páginas que componen el libro</string>
    <string name="worlds_dropdown_menu_new">Nuevo</string>
    <string name="worlds_dropdown_menu_duplicate">Duplicar</string>
    <string name="worlds_row_name">Escenario</string>
    <string name="worlds_not_register">No has creado escenarios, crea uno nuevo desde el menú superior</string>
    <string name="drawings_dropdown_menu_new">Nuevo</string>
    <string name="drawings_dropdown_menu_duplicate">Duplicar</string>
    <string name="drawings_row_name">Personaje</string>
    <string name="drawings_not_register">No has creado personajes, crea uno nuevo desde el menú superior</string>
    <string name="develop_not_register">No has agregado instrucciones, crea instrucciones nuevas desde el menú superior</string>
    <string name="develop_dropdown_menu_add_world">Escenario</string>
    <string name="develop_dropdown_menu_add_drawing">Personaje</string>
    <string name="develop_dropdown_menu_add_motion">Movimiento</string>
    <string name="develop_dropdown_menu_add_look">Vista</string>
    <string name="develop_dropdown_menu_add_sound">Sonido</string>
    <string name="develop_dropdown_menu_add_control">Control</string>
    <string name="develop_dropdown_menu_add_sensing">Detección</string>
    <string name="develop_edittext_number_default_value">5</string>
    <string name="develop_edittext_number_default_string">Hola soy katbag! ;)</string>
    <string name="develop_message_not_drawing">Primero debes agregar personajes</string>
    <string name="develop_dialog_motion_move_the">Mover el</string>
    <string name="develop_dialog_motion_steps">pasos</string>
    <string name="develop_dialog_motion_to">a</string>
    <string name="develop_dialog_motion_x">X</string>
    <string name="develop_dialog_motion_y">Y</string>
    <string name="develop_dialog_motion_only_axis_x">solo en el eje X</string>
    <string name="develop_dialog_motion_only_axis_y">solo en el eje Y</string>
    <string name="develop_dialog_motion_to_the_center">al centro</string>
    <string name="develop_dialog_motion_with_the_accelerometer">con el acelerómetro</string>
    <string name="develop_dialog_motion_rotate_the">Rotar el</string>
    <string name="develop_dialog_motion_to_the_right">a la derecha</string>
    <string name="develop_dialog_motion_to_the_left">a la izquierda</string>
    <string name="develop_dialog_motion_degrees">grados</string>
    <string name="develop_dialog_motion_change_x_for">Cambiar X por</string>
    <string name="develop_dialog_motion_change_y_for">Cambiar Y por</string>
    <string name="develop_dialog_motion_of">del</string>
    <string name="develop_dialog_motion_automatically_move_the">Mover automáticamente el</string>
    <string name="develop_dialog_motion_move">el borde, mover en</string>
    <string name="develop_dialog_motion_randomly">de forma aleatoria</string>
    <string name="develop_dialog_motion_cancel_movement">Cancelar movimiento</string>
    <string name="develop_dialog_motion_with_accelerometer">con acelerómetro del</string>
    <string name="develop_dialog_motion_automatic">automático del</string>
    <string name="develop_dialog_motion_random">aleatorio del</string>
    <string name="develop_dialog_look_hide_the">Esconder el</string>
    <string name="develop_dialog_look_show_the">Mostrar el</string>
    <string name="develop_dialog_look_change_appearance">Cambiar apariencia del</string>
    <string name="develop_dialog_look_for_appearance">por apariencia del</string>
    <string name="develop_dialog_sound_play_the_sound">Reproducir el sonido:</string>
    <string name="develop_dialog_control_wait">Esperar</string>
    <string name="develop_dialog_control_seconds">segundos</string>
    <string name="develop_dialog_control_repeat">Repetir</string>
    <string name="develop_dialog_control_times">veces</string>
    <string name="develop_dialog_control_repeat_indefinitely">Repetir infinitamente</string>
    <string name="develop_dialog_control_start_score_in">Iniciar puntaje en</string>
    <string name="develop_dialog_control_add">Sumar</string>
    <string name="develop_dialog_control_deduct">Restar</string>
    <string name="develop_dialog_control_score">puntos</string>
    <string name="develop_dialog_control_show">Mostrar mensaje:</string>
    <string name="develop_dialog_control_score_equal_to">Si el puntaje es igual a</string>
    <string name="develop_dialog_sensing_if_touch_the">Si tocas el</string>
    <string name="develop_dialog_sensing_if_the">Si el</string>
    <string name="develop_dialog_sensing_other">otros personajes</string>
    <string name="develop_dialog_sensing_collides_with_the">colisiona con el</string>
    <string name="develop_dialog_sensing_collides_with">colisiona con</string>
    <string name="develop_message_empty_n">No puedes dejar los campos vacios</string>
    <string name="develop_message_not_different">Los personajes seleccionados deben ser diferentes</string>
    <string name="develop_message_drawing_exist">El personaje ya existe</string>
    <string name="develop_title_indent">Indentar código</string>
    <string name="pages_dropdown_menu_new">Nuevo</string>
    <string name="pages_dropdown_menu_duplicate">Duplicar</string>
    <string name="pages_row_name">Página</string>
    <string name="pages_not_register">No has creado páginas, crea una nueva desde el menú superior</string>
    <string name="pages_text_default">Este texto es un ejemplo, quita esto ya ;)</string>
    <string name="comics_pages_dropdown_menu_new">Nuevo</string>
    <string name="comics_pages_dropdown_menu_duplicate">Duplicar</string>
    <string name="comics_pages_row_name">Página</string>
    <string name="comics_pages_not_register">No has creado páginas, crea una nueva desde el menú superior</string>
    <string name="comics_pages_text_default">Este texto es un ejemplo, quita esto ya ;)</string>
    <string name="one_world_dropdown_menu_color">Selecciona Color</string>
    <string name="one_world_dropdown_menu_photo_album">Imagen de Galería</string>
    <string name="one_world_dropdown_menu_take_photo">Tomar una Foto</string>
    <string name="one_drawing_dropdown_menu_body">Cuerpo</string>
    <string name="one_drawing_dropdown_menu_hat">Sombrero</string>
    <string name="one_drawing_dropdown_menu_wig">Peluca</string>
    <string name="one_drawing_dropdown_menu_eyes">Ojos</string>
    <string name="one_drawing_dropdown_menu_glasses">Anteojos</string>
    <string name="one_drawing_dropdown_menu_mouth">Boca</string>
    <string name="one_drawing_dropdown_menu_accesory">Accesorios</string>
    <string name="one_drawing_dropdown_menu_comics_action">(Comic) Acciones</string>
    <string name="one_drawing_dropdown_menu_comics_balloon_text">(Comic) Globos de Texto</string>
    <string name="one_drawing_dropdown_menu_comics_object">(Comic) Objetos</string>
    <string name="one_page_dropdown_menu_add_world">Define Escenario</string>
    <string name="one_page_dropdown_menu_add_drawing">Agrega Personaje</string>
    <string name="one_page_dropdown_menu_add_text">Agrega Texto</string>
    <string name="one_page_dropdown_menu_add_sound">Define Sonido de fondo</string>
    <string name="one_page_dropdown_menu_remove_world">Quitar Escenario</string>
    <string name="one_page_dropdown_menu_remove_sound">Quitar Sonido de fondo</string>
    <string name="about_text">Katbag fue impulsado por la Dirección de Asuntos Estudiantiles DAE, Instituto Profesional Providencia (IPP), mediante el financiamiento público del Fondo de Innovación Académica FIAC 1101, dependiente de la División de Educación Superior, Ministerio de Educación.  “Lo construido con fondos públicos, debe ser público”.\n\n
        Katbag ha sido diseñado y desarrollado por Miguel Ángel Bravo (En Twitter @MiguelAngelBrav)</string>
    <string name="licence_text">Katbag está licenciado como software libre bajo la Licencia Pública General GPLv3.  Katbag es libre, por ende, cópialo, compártelo, modifícalo, mejóralo!!\n
Para obtener una copia de esta licencia dirigirse a: \n http://gplv3.fsf.org/</string>
    <string name="player_button_start">Iniciar</string>
    <string name="player_label_score">Puntaje:</string>
</resources>