<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_layout_menu"
    android:orientation="vertical"
    android:paddingTop="15dp" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/image_description"
        android:src="@drawable/katbag_menu_logo" />

    <TextView
        style="@style/subtitle"
        android:text="@string/subtitle_options_menu" />

    <!-- button add -->

    <LinearLayout
        android:id="@+id/menu_item_add"
        style="@style/menu_row" >

        <ImageView
            style="@style/menu_image_row"
            android:src="@drawable/katbag_menu_icon_add" />

        <TextView
            style="@style/menu_item"
            android:text="@string/option_menu_add" />
    </LinearLayout>

    <!-- button board -->

    <LinearLayout
        android:id="@+id/menu_item_board"
        style="@style/menu_row" >

        <ImageView
            style="@style/menu_image_row"
            android:src="@drawable/katbag_menu_icon_board" />

        <TextView
            style="@style/menu_item"
            android:text="@string/option_menu_board" />
    </LinearLayout>

    <!-- button edit -->

    <LinearLayout
        android:id="@+id/menu_item_edit"
        style="@style/menu_row" >

        <ImageView
            style="@style/menu_image_row"
            android:src="@drawable/katbag_menu_icon_edit" />

        <TextView
            style="@style/menu_item"
            android:text="@string/option_menu_edit" />
    </LinearLayout>

    <!-- button about -->

    <LinearLayout
        android:id="@+id/menu_item_about"
        style="@style/menu_row" >

        <ImageView
            style="@style/menu_image_row"
            android:src="@drawable/katbag_menu_icon_about" />

        <TextView
            style="@style/menu_item"
            android:text="@string/option_menu_about" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/version_app"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left|bottom"
            android:text="..."
            android:textColor="@color/subtitle"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>