<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/one_world_dropdown_menu_setting"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always|withText">
        <menu>
            <item
                android:id="@+id/one_world_dropdown_menu_color"
                android:icon="@drawable/ic_action_view_as_grid"
                android:showAsAction="never"
                android:title="@string/one_world_dropdown_menu_color"/>
            <item
                android:id="@+id/one_world_dropdown_menu_photo_album"
                android:icon="@drawable/ic_action_picture"
                android:showAsAction="never"
                android:title="@string/one_world_dropdown_menu_photo_album"/>
            <item
                android:id="@+id/one_world_dropdown_menu_take_photo"
                android:icon="@drawable/ic_action_camera"
                android:showAsAction="never"
                android:title="@string/one_world_dropdown_menu_take_photo"
                android:visible="false"/>
        </menu>
    </item>

</menu>