<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_layout"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_weight="50"
            android:contentDescription="@string/image_description"
            android:gravity="center_vertical|right"
            android:src="@drawable/katbag_about_01" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_weight="50"
            android:contentDescription="@string/image_description"
            android:gravity="center_vertical|left"
            android:src="@drawable/katbag_about_02" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/about_text"
            android:textColor="@color/generic_item_title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/licence_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/licence_text"
            android:textColor="@color/generic_item_title"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>